alignment fix

--- a/css/profile.css
+++ b/css/profile.css
@@ -1,4 +1,10 @@
-
+table .design_philo{
+font-family: 'Century Gothic','CenturyGothic','AppleGothic',sans-serif;
+font-weight: normal;
+}
+table .design_philo th{
+font-weight: normal;
+}
 .menu-profile p:hover{
 	color:#FF6600;
 	cursor: pointer;
@@ -10,5 +16,7 @@
 
 }  
 .right-view-biography{
-
+}
+th{
+font-weight: normal;
 }
